--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/iCOderBootstrap/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/iCOderBootstrap/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  " href="/iCOderBootstrap/about.html">About</a>
@@ -50,7 +50,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/iCOderBootstrap/contact.html">Contact</a>
+                        <a class="nav-link " href="/iCOderBootstrap/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
